enhance CSV validation for bulk updates, add new test cases, and implement error handling for file-related issues