@@ -2,16 +2,16 @@ package com.gepardec.mega.rest.impl;
 
 import com.gepardec.mega.application.interceptor.MegaRolesAllowed;
 import com.gepardec.mega.application.producer.ResourceBundleProducer;
-import com.gepardec.mega.db.entity.employee.User;
-import com.gepardec.mega.db.repository.UserRepository;
 import com.gepardec.mega.domain.model.Employee;
 import com.gepardec.mega.domain.model.Role;
+import com.gepardec.mega.domain.model.User;
 import com.gepardec.mega.rest.api.EmployeeResource;
 import com.gepardec.mega.rest.mapper.EmployeeMapper;
 import com.gepardec.mega.rest.model.BulkUpdateDto;
-import com.gepardec.mega.rest.model.BulkUpdateResponseDto;
+import com.gepardec.mega.rest.model.BulkUpdateErrorResponseDto;
 import com.gepardec.mega.rest.model.EmployeeDto;
 import com.gepardec.mega.service.api.EmployeeService;
+import com.gepardec.mega.service.api.UserService;
 import com.gepardec.mega.zep.ZepService;
 import io.quarkus.security.Authenticated;
 import jakarta.enterprise.context.RequestScoped;
@@ -20,20 +20,40 @@ import jakarta.ws.rs.core.HttpHeaders;
 import jakarta.ws.rs.core.Response;
 
 import java.io.BufferedReader;
+import java.io.IOException;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
-import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 @RequestScoped
 @Authenticated
 @MegaRolesAllowed({Role.PROJECT_LEAD, Role.OFFICE_MANAGEMENT})
 public class EmployeeResourceImpl implements EmployeeResource {
+
+    private static final int EXPECTED_CSV_COLUMNS = 3;
+    private static final String CSV_DELIMITER_REGEX = "[,;]";
+    private static final int USER_ID_COLUMN = 0;
+    private static final int RATE_COLUMN = 1;
+    private static final int DATE_COLUMN = 2;
+    private static final String CSV_COMMENT_PREFIX = "#";
+    private static final String CSV_HEADER = "#ZEPMitarbeiterId,neuerStundensatz,gueltigAb YYYY-MM-DD";
+
+    /**
+     * Represents a line from the CSV file with its original line number.
+     * This is necessary to report accurate line numbers in error messages,
+     * even after filtering out blank lines and comments.
+     */
+    private record CsvLine(int originalLineNumber, String content) {
+    }
 
     @Inject
     EmployeeMapper mapper;
@@ -45,7 +65,7 @@ public class EmployeeResourceImpl implements EmployeeResource {
     ZepService zepService;
 
     @Inject
-    UserRepository userRepo;
+    UserService userService;
 
     @Inject
     ResourceBundleProducer resourceBundleProducer;
@@ -63,52 +83,118 @@ public class EmployeeResourceImpl implements EmployeeResource {
 
     @Override
     public Response uploadInternalRate(BulkUpdateDto input, HttpHeaders headers) {
-
-        final List<String> lines = new BufferedReader(new InputStreamReader(input.getFile()))
-                .lines()
-                .toList();
+        if (input == null || input.getFile() == null) {
+            return Response.status(Response.Status.BAD_REQUEST).build();
+        }
 
         final Locale locale = getLocaleFromHeader(headers);
+        final List<CsvLine> dataLines;
 
-        List<Integer> verifyUpload = determineLinesWhereLengthInvalid(lines); //checks if the file is formatted correctly
-
-        if (!verifyUpload.isEmpty()) {
+        try {
+            dataLines = readAndFilterCsvLines(input);
+        } catch (IOException e) {
             return Response
-                    .status(Response.Status.BAD_REQUEST)
-                    .entity(
-                            createErrorResponseDto(
-                                    "error.bad-file",
-                                    verifyUpload,
-                                    locale
-                            ))
+                    .status(Response.Status.INTERNAL_SERVER_ERROR)
+                    .entity(createErrorResponseDto("error.reading-file", List.of(), locale))
                     .build();
         }
 
-        List<Integer> verifyEmployees = determineLinesWhereEmployeeNotExists(lines);
-
-        if (!verifyEmployees.isEmpty()) { //checks whether employees in the file exist locally
+        if (dataLines.isEmpty()) {
             return Response
                     .status(Response.Status.BAD_REQUEST)
-                    .entity(
-                            createErrorResponseDto(
-                                    "error.employee-does-not-exist",
-                                    verifyEmployees,
-                                    locale
-                            ))
+                    .entity(createErrorResponseDto("error.empty-file", List.of(), locale))
                     .build();
         }
 
-        for (String l : lines) {
-            if (l.startsWith("#")) {
-                continue;
+        List<Integer> formatErrors = validateCsvFormat(dataLines);
+        if (!formatErrors.isEmpty()) {
+            return Response
+                    .status(Response.Status.BAD_REQUEST)
+                    .entity(createErrorResponseDto("error.bad-file", formatErrors, locale))
+                    .build();
+        }
+
+        List<Integer> nonExistentEmployeeErrors = findNonExistentEmployees(dataLines);
+        if (!nonExistentEmployeeErrors.isEmpty()) {
+            return Response
+                    .status(Response.Status.BAD_REQUEST)
+                    .entity(createErrorResponseDto("error.employee-does-not-exist", nonExistentEmployeeErrors, locale))
+                    .build();
+        }
+
+        updateEmployeeRates(dataLines);
+        return Response.ok().build();
+    }
+
+    private List<CsvLine> readAndFilterCsvLines(BulkUpdateDto input) throws IOException {
+        final AtomicInteger lineNumber = new AtomicInteger(0);
+        try (BufferedReader reader = new BufferedReader(
+                new InputStreamReader(input.getFile(), StandardCharsets.UTF_8))) {
+            return reader.lines()
+                    .map(line -> new CsvLine(lineNumber.incrementAndGet(), line))
+                    .filter(csvLine -> csvLine.content() != null)
+                    .filter(csvLine -> !csvLine.content().isBlank())
+                    .filter(csvLine -> !csvLine.content().startsWith(CSV_COMMENT_PREFIX))
+                    .toList();
+        }
+    }
+
+    private List<Integer> validateCsvFormat(List<CsvLine> lines) {
+        final List<Integer> errorLines = new ArrayList<>();
+
+        lines.forEach(csvLine -> {
+            String[] parts = csvLine.content().split(CSV_DELIMITER_REGEX, -1);
+
+            if (parts.length != EXPECTED_CSV_COLUMNS) {
+                errorLines.add(csvLine.originalLineNumber());
+                return;
             }
+
+            if (parts[USER_ID_COLUMN].isBlank() || parts[RATE_COLUMN].isBlank() || parts[DATE_COLUMN].isBlank()) {
+                errorLines.add(csvLine.originalLineNumber());
+                return;
+            }
+
+            try {
+                Double.parseDouble(parts[RATE_COLUMN]);
+            } catch (NumberFormatException e) {
+                errorLines.add(csvLine.originalLineNumber());
+                return;
+            }
+
+            try {
+                LocalDate.parse(parts[DATE_COLUMN]);
+            } catch (DateTimeParseException e) {
+                errorLines.add(csvLine.originalLineNumber());
+            }
+        });
+
+        return errorLines;
+    }
+
+    private List<Integer> findNonExistentEmployees(List<CsvLine> lines) {
+        Set<String> employeeIds = lines.stream()
+                .map(csvLine -> extractUserId(csvLine.content()))
+                .collect(Collectors.toSet());
+
+        Set<String> existingIds = userService.findByZepIds(employeeIds).stream()
+                .map(User::getUserId)
+                .collect(Collectors.toSet());
+
+        return lines.stream()
+                .filter(csvLine -> !existingIds.contains(extractUserId(csvLine.content())))
+                .map(CsvLine::originalLineNumber)
+                .toList();
+    }
+
+    private void updateEmployeeRates(List<CsvLine> dataLines) {
+        for (CsvLine csvLine : dataLines) {
             zepService.updateEmployeeHourlyRate(
-                    extractUserId(l),
-                    extractNewRate(l),
-                    extractFromDate(l)
+                    extractUserId(csvLine.content()),
+                    extractNewRate(csvLine.content()),
+                    extractFromDate(csvLine.content())
             );
         }
-        return Response.ok().build();
     }
 
     @Override
@@ -116,12 +202,11 @@ public class EmployeeResourceImpl implements EmployeeResource {
         final List<Employee> allActiveEmployees = employeeService.getAllActiveEmployees();
         final String currentDate = LocalDate.now().format(DateTimeFormatter.ISO_LOCAL_DATE);
 
-        // Create CSV content with header and employee data sorted by ZEP ID
         final String csvContent = allActiveEmployees.stream()
                 .sorted(Comparator.comparing(Employee::getUserId))
                 .map(employee -> String.format("%s,,%s", employee.getUserId(), currentDate))
                 .collect(Collectors.joining("\n",
-                        "#ZEPMitarbeiterId,neuerStundensatz,gueltigAb YYYY-MM-DD\n",
+                        CSV_HEADER + "\n",
                         "\n"));
 
         return Response.ok(csvContent)
@@ -129,96 +214,43 @@ public class EmployeeResourceImpl implements EmployeeResource {
                 .build();
     }
 
-    /**
-     * Creates a BulkUpdateResponse to use for a JSON error response.
-     * the message language is decided by getLocaleFromHeader().
-     *
-     * @param bundleKey for of the wanted error-message
-     * @return the map that represents the errormessage the bundleKey specifies.
-     */
-    private BulkUpdateResponseDto createErrorResponseDto(String bundleKey, List<Integer> errorLocation, Locale locale) {
-        return new BulkUpdateResponseDto(
-                resourceBundleProducer
-                        .getResourceBundle(locale)
-                        .getString(bundleKey),
-                errorLocation);
+    private BulkUpdateErrorResponseDto createErrorResponseDto(String bundleKey, List<Integer> errorLocation, Locale locale) {
+        return new BulkUpdateErrorResponseDto(
+                resourceBundleProducer.getResourceBundle(locale).getString(bundleKey),
+                errorLocation
+        );
     }
 
-    /**
-     * Verifies if the lines in the File have enough chars to be formatted correctly
-     *
-     * @param lines of the file
-     * @return the line numbers where the format error is
-     */
-    private List<Integer> determineLinesWhereLengthInvalid(List<String> lines) {
-        final List<Integer> retList = new ArrayList<>();
-
-        for (int i = 0; i < lines.size(); i++) {
-            if (lines.get(i).startsWith("#")) {
-                continue;
-            }
-            if (lines.get(i).length() <= 5) {
-                retList.add(i + 1);
-            }
-        }
-        return retList;
-    }
-
-    /**
-     * Verifies the existence of an employee according to their ZEP id in the LOCAL mega-db
-     *
-     * @param lines of the file
-     * @return the line numbers where the format error is
-     */
-    private List<Integer> determineLinesWhereEmployeeNotExists(List<String> lines) {
-        final List<Integer> retList = new ArrayList<>();
-        for (int i = 0; i < lines.size(); i++) {
-            if (lines.get(i).startsWith("#")) {
-                continue;
-            }
-
-            String zId = lines.get(i).split(",")[0];
-            Optional<User> user = userRepo.findByZepId(zId);
-
-            if (user.isEmpty()) {
-                retList.add(i + 1);
-            }
-        }
-        return retList;
-    }
-
-    /**
-     * Extracts the first csv from one line, which is the UserId
-     *
-     * @param line one line of the request
-     * @return userId
-     */
     private String extractUserId(String line) {
-        return line.split(",")[0];
+        String[] parts = line.split(CSV_DELIMITER_REGEX, -1);
+        if (parts.length < EXPECTED_CSV_COLUMNS) {
+            throw new IllegalArgumentException("Invalid CSV line format");
+        }
+        return parts[USER_ID_COLUMN];
     }
 
-    /**
-     * Extracts the second csv from one line, which is the newRate
-     *
-     * @param line one line of the request
-     * @return newRate
-     */
     private Double extractNewRate(String line) {
-        return Double.parseDouble(line.split(",")[1]);
+        String[] parts = line.split(CSV_DELIMITER_REGEX, -1);
+        if (parts.length < EXPECTED_CSV_COLUMNS) {
+            throw new IllegalArgumentException("Invalid CSV line format");
+        }
+        try {
+            return Double.parseDouble(parts[RATE_COLUMN]);
+        } catch (NumberFormatException e) {
+            throw new IllegalArgumentException("Invalid rate format in line: " + line, e);
+        }
     }
 
-    /**
-     * Extracts the third csv from one line, which is the fromDate
-     *
-     * @param line one line of the request
-     * @return fromDate
-     */
     private String extractFromDate(String line) {
-        return line.split(",")[2];
+        String[] parts = line.split(CSV_DELIMITER_REGEX, -1);
+        if (parts.length < EXPECTED_CSV_COLUMNS) {
+            throw new IllegalArgumentException("Invalid CSV line format");
+        }
+        return parts[DATE_COLUMN];
     }
 
     private Locale getLocaleFromHeader(HttpHeaders headers) {
         final List<Locale> langs = headers.getAcceptableLanguages();
-        return langs.isEmpty() ? Locale.getDefault() : langs.get(0);
+        return langs.isEmpty() ? Locale.ENGLISH : langs.getFirst();
     }
 }
